assets/css/pre_fare/prefare_single_screen_alert.scss
@use "CSS/colors";

.pre-fare-alert__page {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.alert-container--single-page {
  box-sizing: border-box;
  flex-grow: 1;
  width: 1080px;
  min-height: 0;
  padding: 0 32px 32px;

  /* Background colors */

  &.alert-container--blue {
    background-color: colors.$line-blue;
  }

  &.alert-container--red {
    background-color: colors.$line-red;
  }

  &.alert-container--orange {
    background-color: colors.$line-orange;
  }

  &.alert-container--yellow {
    background-color: colors.$alert-yellow;
  }

  &.alert-container--green {
    background-color: colors.$line-green;
  }

  /* Alert contents */

  .alert-card {
    display: flex;
    flex-direction: column;
    height: 100%;
    background-color: colors.$warm-neutral-90;

    &--no-banner {
      border-radius: 4px;
    }

    &--with-banner {
      border-radius: 0 0 4px 4px;
    }
  }

  .alert-card__body {
    box-sizing: border-box;
    flex-grow: 1;
    min-height: 0;
    padding: 120px 56px 32px;

    &--shuttle {
      padding-top: 80px;
      padding-bottom: 0;
    }

    .alert-card__content-block {
      display: flex;
      flex-flow: column;
      align-items: flex-start;
      height: 100%;
    }
  }

  .alert-card__issue,
  .alert-card__remedy {
    display: flex;
  }

  .alert-card__issue {
    margin-bottom: 48px;
  }

  .alert-card__remedy {
    margin-bottom: 48px;

    &__text {
      align-self: center;

      &--alternate-route {
        font-weight: 400;
      }
    }
  }

  .alert-card__issue__location {
    margin-top: 40px;
  }

  .alert-card__remedy__shuttle-icons {
    display: flex;
    flex-direction: column;
  }

  .alert-card__icon {
    min-width: 98px;
    height: 98px;
    margin-right: 45px;
    color: colors.$cool-black-15;

    &--large {
      min-width: 128px;
      height: 128px;
    }
  }

  .alert-card__content-block__text-sections {
    max-height: 772px;
  }

  .alert-card__fallback__icon {
    height: 192px;
    margin-bottom: 48px;
    color: colors.$cool-black-15;
  }

  .alert-card__fallback__issue-text {
    margin-bottom: 54px;
  }

  .alert-card__fallback__alert-text {
    max-height: 460px;

    &--bold {
      font-weight: 700;
    }
  }

  .alert-card__body__accessibility-info {
    &--text {
      display: flex;
      margin-top: 22px;
    }
  }

  .alert-card__isa-icon {
    height: 40px;
    margin-left: 16px;
  }

  .alert-card__footer {
    box-sizing: border-box;
    display: flex;
    flex-shrink: 0;
    align-items: center;
    justify-content: right;
    height: 84px;
    padding: 20px 60px;
    color: colors.$cool-black-30;
    background: colors.$warm-neutral-80;
    border-radius: 0 0 4px 4px;
  }

  .alert-card__footer__cause {
    flex-grow: 1;
  }

  .alert-card__footer__datetime {
    font-weight: 600;
  }

  .disruption-diagram-container {
    flex: 1;
    width: 100%;
    min-height: 0;
    margin-bottom: 64px;
  }
}

.alert-container--no-banner {
  padding-top: 32px;
}

.alert-container--right {
  position: absolute;
  top: 0;
  left: 1080px;
}

.alert-card__content-block__route-pill {
  display: inline;
  height: 124px;
  margin-right: 9px;
  vertical-align: bottom;

  &:last-of-type {
    margin-right: 46px;
  }
}

